--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class="odd-numbers">Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p class="odd-numbers"></p>>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div id="second-element">Number 2 - I'm one ID.</div>
+    <p class="odd-numbers third-element">Number 3 - I'm a class, but cooler!</p>
+    <div id="fourth-element">Number 4 - I'm another ID.</div>
     <p class="odd-numbers">Number 5 - I'm a class!</p>
   </body>
 </html>
