--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -20,18 +20,20 @@
     </div>
     <div class="content">
       <img src="./logo.png" alt="">
-      <div class="input">
-        <input type="text">
-      </div>
-      <div class="buttons">
-        <button>Do the thing!</button>
-        <button>Do the other thing!</button>
-      </div>
+        <div class="input">
+          <input type="text">
+        </div>
+        <div class="buttons">
+          <button>Do the thing!</button>
+          <button>Do the other thing!</button>
+        </div>
     </div>
     <div class="footer">
       <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
+        <div class="left-container">
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">Business</a></li>
+        </div>
       </ul>
       <ul class="right-links">
         <li><a href="#">Privacy</a></li>
